Remove DateUtil::getLastDayOfYear